Fix navbar collapse feature

--- a/css/custom.css
+++ b/css/custom.css
@@ -138,7 +138,11 @@ footer {
 }
 
 .navbar-default .navbar-toggle .icon-bar {
-  background-color: #ffffff;
+  background-color: #97310e;
+}
+
+.navbar-default .navbar-toggle:hover .icon-bar {
+  background-color: #FFF;
 }
 
 .navbar-default .navbar-collapse,
